test/good/printInt.lat
int main () {
  printInt(42) ;
}
