test/bad/fun_arg_type.lat
int main() {
    f("a");
}

void f(int a) {

}
